--- a/public/views/leaderboard.html
+++ b/public/views/leaderboard.html
@@ -9,6 +9,7 @@
   <link rel="stylesheet" href="../styles/emory.css">
   <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/js/bootstrap.min.js"></script>
   <script src="../controllers/appStaticFile.js"></script>
+  <script src="../controllers/filters.js"></script>
 </head>
 <body ng-controller="leaderboardCtrl" ng-init="initialize()">
   <div class="container-fluid">
