--- a/public/views/leaderboard.html
+++ b/public/views/leaderboard.html
@@ -51,34 +51,6 @@
       <hr style = "width: 50%">
     </div>
 
-    <div class="row">
-      <div class = "container">
-        <h1>Leaders</h1>
-        <h6>Total Progress:</h6>
-        <div class="progress progress-striped active">
-          <div class="progress-bar progress-bar-info" style="width: {{progress}}"></div>
-        </div>
-        <table class="table table-striped table-hover" id="leaders">
-          <thead>
-            <tr>
-              <th>Place</th>
-              <th>Name</th>
-              <th>Amount Raised</th>
-              <th>Personal Page</th>
-            </tr>
-          </thead>
-          <tbody>
-            <tr ng-repeat="leader in leaders | orderBy:'amount_raised':true">
-              <td>{{$index + 1}}</td>
-              <td>{{leader.name}}</td>
-              <td>{{leader.amount_raised}}</td>
-              <td><a ng-href="{{leader.url}}" class="label label-info">Donate to {{leader.name}}</a></td>
-            </tr>
-          </tbody>
-        </table>
-      </div>
-    </div>
-
     <div class = "container">
       <div class = "row">
         <div class = "col-md-6" id="admin">
@@ -95,7 +67,7 @@
           <tbody>
             <tr ng-repeat="leader in leaders | orderBy:'amount_raised':true | filter:{unit:'Admin'}">
               <td>{{$index + 1}}</td>
-              <td>{{leader.name}}</td>
+              <td>{{leader.camp_name}}</td>
               <td>{{leader.amount_raised}}</td>
               <td><a ng-href="{{leader.url}}" class="label label-info">Donate to {{leader.name}}</a></td>
             </tr>
@@ -116,7 +88,7 @@
           <tbody>
             <tr ng-repeat="leader in leaders | orderBy:'amount_raised':true | filter:{unit:'Yellow'}">
               <td>{{$index + 1}}</td>
-              <td>{{leader.name}}</td>
+              <td>{{leader.camp_name}}</td>
               <td>{{leader.amount_raised}}</td>
               <td><a ng-href="{{leader.url}}" class="label label-info">Donate to {{leader.name}}</a></td>
             </tr>
@@ -140,7 +112,7 @@
           <tbody>
             <tr ng-repeat="leader in leaders | orderBy:'amount_raised':true | filter:{unit:'Green'}">
               <td>{{$index + 1}}</td>
-              <td>{{leader.name}}</td>
+              <td>{{leader.camp_name}}</td>
               <td>{{leader.amount_raised}}</td>
               <td><a ng-href="{{leader.url}}" class="label label-info">Donate to {{leader.name}}</a></td>
             </tr>
@@ -161,7 +133,7 @@
           <tbody>
             <tr ng-repeat="leader in leaders | orderBy:'amount_raised':true | filter:{unit:'Blue'}">
               <td>{{$index + 1}}</td>
-              <td>{{leader.name}}</td>
+              <td>{{leader.camp_name}}</td>
               <td>{{leader.amount_raised}}</td>
               <td><a ng-href="{{leader.url}}" class="label label-info">Donate to {{leader.name}}</a></td>
             </tr>
@@ -185,7 +157,7 @@
           <tbody>
             <tr ng-repeat="leader in leaders | orderBy:'amount_raised':true | filter:{unit:'Red'}">
               <td>{{$index + 1}}</td>
-              <td>{{leader.name}}</td>
+              <td>{{leader.camp_name}}</td>
               <td>{{leader.amount_raised}}</td>
               <td><a ng-href="{{leader.url}}" class="label label-info">Donate to {{leader.name}}</a></td>
             </tr>
@@ -206,7 +178,7 @@
           <tbody>
             <tr ng-repeat="leader in leaders | orderBy:'amount_raised':true | filter:{unit:'Orange'}">
               <td>{{$index + 1}}</td>
-              <td>{{leader.name}}</td>
+              <td>{{leader.camp_name}}</td>
               <td>{{leader.amount_raised}}</td>
               <td><a ng-href="{{leader.url}}" class="label label-info">Donate to {{leader.name}}</a></td>
             </tr>
