--- a/public/views/leaderboard.html
+++ b/public/views/leaderboard.html
@@ -46,12 +46,29 @@
     <div class = "container">
       <hr style = "width: 50%">
       <h1><b>Fun</b>draising</h1>
-      <p>In effort to finish our fundraising goal and send 100 kids to camp, we are hosting a fundraising challenge. Starting June 24th, donations to a counselor will automatically count towards the competition. The "winning" counselor will have to undergo a camp punishment (such as being turned into a human sundae). Help us make Kesem magic this summer and embarrass your loved one at the same time!</p>
+      <p></p>
       <br>
       <hr style = "width: 50%">
     </div>
 
     <div class = "container">
+      <div class = "row">
+        <div class="progress">
+  <div class="progress-bar progress-bar-info" style="width: 20%"></div>
+</div>
+
+<div class="progress">
+  <div class="progress-bar progress-bar-success" style="width: 40%"></div>
+</div>
+
+<div class="progress">
+  <div class="progress-bar progress-bar-warning" style="width: 60%"></div>
+</div>
+
+<div class="progress">
+  <div class="progress-bar progress-bar-danger" style="width: 80%"></div>
+</div>
+      </div>
       <div class = "row">
         <div class = "col-md-6" id="admin">
         <h2>Admin Team</h2>
@@ -68,7 +85,7 @@
             <tr ng-repeat="leader in leaders | orderBy:'amount_raised':true | filter:{unit:'Admin'}">
               <td>{{$index + 1}}</td>
               <td>{{leader.camp_name}}</td>
-              <td>{{leader.amount_raised}}</td>
+              <td>${{leader.amount_raised}}</td>
               <td><a ng-href="{{leader.url}}" class="label label-info">Donate to {{leader.name}}</a></td>
             </tr>
           </tbody>
@@ -89,7 +106,7 @@
             <tr ng-repeat="leader in leaders | orderBy:'amount_raised':true | filter:{unit:'Yellow'}">
               <td>{{$index + 1}}</td>
               <td>{{leader.camp_name}}</td>
-              <td>{{leader.amount_raised}}</td>
+              <td>${{leader.amount_raised}}</td>
               <td><a ng-href="{{leader.url}}" class="label label-info">Donate to {{leader.name}}</a></td>
             </tr>
           </tbody>
@@ -113,7 +130,7 @@
             <tr ng-repeat="leader in leaders | orderBy:'amount_raised':true | filter:{unit:'Green'}">
               <td>{{$index + 1}}</td>
               <td>{{leader.camp_name}}</td>
-              <td>{{leader.amount_raised}}</td>
+              <td>${{leader.amount_raised}}</td>
               <td><a ng-href="{{leader.url}}" class="label label-info">Donate to {{leader.name}}</a></td>
             </tr>
           </tbody>
@@ -134,7 +151,7 @@
             <tr ng-repeat="leader in leaders | orderBy:'amount_raised':true | filter:{unit:'Blue'}">
               <td>{{$index + 1}}</td>
               <td>{{leader.camp_name}}</td>
-              <td>{{leader.amount_raised}}</td>
+              <td>${{leader.amount_raised}}</td>
               <td><a ng-href="{{leader.url}}" class="label label-info">Donate to {{leader.name}}</a></td>
             </tr>
           </tbody>
@@ -158,7 +175,7 @@
             <tr ng-repeat="leader in leaders | orderBy:'amount_raised':true | filter:{unit:'Red'}">
               <td>{{$index + 1}}</td>
               <td>{{leader.camp_name}}</td>
-              <td>{{leader.amount_raised}}</td>
+              <td>${{leader.amount_raised}}</td>
               <td><a ng-href="{{leader.url}}" class="label label-info">Donate to {{leader.name}}</a></td>
             </tr>
           </tbody>
@@ -179,7 +196,7 @@
             <tr ng-repeat="leader in leaders | orderBy:'amount_raised':true | filter:{unit:'Orange'}">
               <td>{{$index + 1}}</td>
               <td>{{leader.camp_name}}</td>
-              <td>{{leader.amount_raised}}</td>
+              <td>${{leader.amount_raised}}</td>
               <td><a ng-href="{{leader.url}}" class="label label-info">Donate to {{leader.name}}</a></td>
             </tr>
           </tbody>
