--- a/public/views/leaderboard.html
+++ b/public/views/leaderboard.html
@@ -14,7 +14,7 @@
   <div class="container-fluid">
 
     <div class="row">
-      <nav class="navbar navbar-default navbar-static-top">
+      <nav class="navbar navbar-inverse navbar-static-top">
         <div class="container">
           <div class="navbar-header">
             <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1">
@@ -54,12 +54,12 @@
     <div class = "container">
       <div class = "row">
         <div class="progress progress-striped active">
-        <div class="progress-bar progress-bar-default" style="width: {{admin_progress}}"></div>
         <div class="progress-bar progress-bar-yellow" style="width: {{yellow_progress}}"></div>
           <div class="progress-bar progress-bar-success" style="width: {{green_progress}}"></div>
           <div class="progress-bar progress-bar-info" style="width: {{blue_progress}}"></div>
           <div class="progress-bar progress-bar-danger" style="width: {{red_progress}}"></div>
           <div class="progress-bar progress-bar-warning" style="width: {{orange_progress}}"></div>
+          <div class="progress-bar progress-bar-default" style="width: {{admin_progress}}"></div>
         </div>
       </div>
       <div class = "row">
