Links at the top

--- a/public/views/leaderboard.html
+++ b/public/views/leaderboard.html
@@ -14,7 +14,7 @@
   <div class="container-fluid">
 
     <div class="row">
-      <nav class="navbar navbar-inverse navbar-static-top">
+      <nav class="navbar navbar-default navbar-static-top">
         <div class="container">
           <div class="navbar-header">
             <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1">
@@ -28,7 +28,12 @@
 
           <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
             <ul class="nav navbar-nav navbar-right">
-              <li><a href="#leaders"><span class="label label-warning">View Leaders</span></a></li>
+              <li><a href="#leaders"><span class="label label-default">Admin</span></a></li>
+              <li><a href="#leaders"><span class="label progress-bar-yellow">Yellow</span></a></li>
+              <li><a href="#leaders"><span class="label label-success">Green</span></a></li>
+              <li><a href="#leaders"><span class="label label-info">Blue</span></a></li>
+              <li><a href="#leaders"><span class="label label-danger">Red</span></a></li>
+              <li><a href="#leaders"><span class="label label-warning">Orange</span></a></li>
             </ul>
           </div>
         </div>
