Final edit until later

--- a/public/views/leaderboard.html
+++ b/public/views/leaderboard.html
@@ -51,7 +51,8 @@
     <div class = "container">
       <hr style = "width: 50%">
       <h1><b>Fun</b>draising</h1>
-      <p></p>
+      <p>In an effort to finish its fundraising for the 2015 year, Camp Kesem Emory thought it would spark a little friendly competition between its counselors. Arranged by their units at camp, they are all still working towards the total goal! We invite you to support your favorite counselor or loved one by donating at the link to the right of their name.</p>
+      <p><b>Note:</b> Donation amounts on this page are updated periodically throughout the day. Results will not show instantly.</p>
       <br>
       <hr style = "width: 50%">
     </div>
@@ -206,7 +207,7 @@
 
     <div class="container">
       <footer class="footer">
-        <p>Disclaimer: If something doesn't work, please direct all complaints to Pono at <a>pono@virginia.edu</a></p>
+        <p>Disclaimer: If something doesn't work, please direct all complaints to Pono at <a>pono@virginia.edu</a>. Under the same moon and stars Emory. &hearts;</p>
       </footer>
     </div>
 
